--- a/TM_SimplePendant/App.xaml
+++ b/TM_SimplePendant/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:TM_SimplePendant"
-             StartupUri="MainWindow.xaml">
+             StartupUri="/Views/ModbusWindow.xaml">
     <Application.Resources>
          
     </Application.Resources>
